--- a/Budget/res/layout/line_frag.xml
+++ b/Budget/res/layout/line_frag.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <com.teamNikAml.budget.graph.LineGraph
+    <com.dd.ddclient.graph.LineGraph
         android:id="@+id/linegraph"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
