--- a/Budget/res/values/color.xml
+++ b/Budget/res/values/color.xml
@@ -31,6 +31,9 @@
         
       
    
+        
+        <color name="spinner_normal">#045b88</color>
+      <color name="spinner_activated">#188ac5</color>
       
       
     
